cmake_minimum_required(VERSION 3.2)

PROJECT(jasslua)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
INCLUDE(cmake/ModuleImport.cmake)
INCLUDE(cmake/ModuleCompileOptions.cmake)
ModuleSetCompileOptions()

SET(JASSLUA_VERSION_MAJOR "1")
SET(JASSLUA_VERSION_MINOR "0")
SET(JASSLUA_VERSION_PATCH "1")
SET(JASSLUA_VERSION "${JASSLUA_VERSION_MAJOR}.${JASSLUA_VERSION_MINOR}.${JASSLUA_VERSION_PATCH}")

MESSAGE(STATUS "VERSION: ${JASSLUA_VERSION}")

OPTION(USE_JASSLUA "use jasslua" OFF)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/lua)
FILE(GLOB DMLUA_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.cc
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.c
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.h
)

LIST(FILTER DMLUA_SOURCES EXCLUDE REGEX "lua.c$")
LIST(FILTER DMLUA_SOURCES EXCLUDE REGEX "luac.c$")
LIST(FILTER DMLUA_SOURCES EXCLUDE REGEX "wmain.c$")

FILE(GLOB LUA_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/lua.c
)

IF (WIN32)
        ADD_LIBRARY(lua53 SHARED ${DMLUA_SOURCES})
        ADD_EXECUTABLE(lua ${LUA_SOURCES})
        TARGET_LINK_LIBRARIES(lua lua53)
        SET_TARGET_PROPERTIES(lua53 PROPERTIES COMPILE_FLAGS "-DLUA_BUILD_AS_DLL -DLUA_CORE")
ELSEIF (UNIX)
        ADD_LIBRARY(lua53 SHARED ${DMLUA_SOURCES})
        ADD_EXECUTABLE(lua ${LUA_SOURCES})
        TARGET_LINK_LIBRARIES(lua lua53 m dl)
        SET_TARGET_PROPERTIES(lua53 PROPERTIES COMPILE_FLAGS "-Wl,-E")
ENDIF ()

LibImport("jasslua" "src/jasslua")
ExeImport("test" "jasslua;lua53")

#ADD_CUSTOM_COMMAND(
#TARGET jassluatest
#PRE_BUILD
#COMMAND ${CMAKE_COMMAND} -E copy_if_different
#${CMAKE_CURRENT_SOURCE_DIR}/config/test.csv
#$<TARGET_FILE_DIR:jassluatest>
#)

#INSTALL(DIRECTORY include/ DESTINATION include)
#INSTALL(TARGETS jasslua
#        RUNTIME DESTINATION bin
#        LIBRARY DESTINATION lib
#        ARCHIVE DESTINATION lib)

#SET(JASSLUA_LIBS "jasslua")
#MARK_AS_ADVANCED(${JASSLUA_LIBS})